# aia-papers

./: README.md  pyproject.toml
aia-papers/: main.py  notebook.ipynb  pairwise_similarity.csv
aia-papers/index_data/: embeddings.npy  index.faiss  metadata.json
docs/: similarity_graph.html  umap_plot.html
